# HNG-1-task

./: .gitignore  Makefile  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20260415_0022_sdsd.py
app/: __init__.py  crud.py  database.py  main.py  models.py  requirements.txt  services.py
