[project]
name = "stage1-task"
version = "0.1.0"
description = "FastAPI backend integrating multiple APIs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "sqlalchemy>=2.0.29",
    "httpx>=0.27.0",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "uuid6>=2024.1.12",
]
